k8s/development.yml
apiVersion: v1
kind: Service
metadata:
    name: game-makao-backend-dev
spec:
    ports:
        - port: 80
          targetPort: 80
    selector:
        app: game-makao-backend-dev
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: game-makao-backend-dev
spec:
    selector:
        matchLabels:
            app: game-makao-backend-dev
    replicas: 1
    template:
        metadata:
            labels:
                app: game-makao-backend-dev
        spec:
            containers:
                - name: game-makao-backend-dev
                  image: registry.gitlab.com/enlighten1/capgemini-capmania/makao-backend:latest-development
                  imagePullPolicy: Always
                  ports:
                      - containerPort: 80
                  resources:
                      requests:
                          memory: '40Mi'
                          cpu: '20m'
                      limits:
                          memory: '100Mi'
                          cpu: '100m'
            imagePullSecrets:
                - name: regcred
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: game-makao-backend-dev-ingress
    annotations:
        kubernetes.io/ingress.class: nginx
        cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
    tls:
        - hosts:
              - game-makao-backend-dev.capgemini.enl-projects.com
          secretName: game-makao-backend-dev-tls
    rules:
        - host: game-makao-backend-dev.capgemini.enl-projects.com
          http:
              paths:
                  - backend:
                        serviceName: game-makao-backend-dev
                        servicePort: 80
